--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@
 .ex-5-square:hover {
     transform: scale(2);
 }
+.ex-5-square:active {
+    transform: scale(.3);
+}
 
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
